# utool

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
tests/: test_ubrk.py  test_ucol.py  test_upar.py  test_upvt.py  test_usum.py  test_usup.py
utool/: uavg.py  ubrk.py  ucol.py  upar.py  upvt.py  usum.py  usup.py
