[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "A",  # don't clobber python builtins
    "B",  # bugbear: security
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # string concatenation
    "UP",  # better syntax by version
    "RUF",  # ruff developers
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
