[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "utool"
version = "1.0.1"

[project.scripts]
usum = "utool.usum:main"
ucol = "utool.ucol:main"
upar = "utool.upar:main"

[flake8]
max-line-length = 88

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "A",  # don't clobber python builtins
    "B",  # bugbear: security
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # string concatenation
    "UP",  # better syntax by version
    "RUF",  # ruff developers
]
